k8s/descheduler.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: descheduler
  name: descheduler
  namespace: kube-descheduler
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: descheduler
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: descheduler
    spec:
      containers:
        - args:
            - --policy-config-file=/policy-dir/policy.yaml
            - --logging-format=text
            - --tls-cert-file=/certs-dir/tls.crt
            - --tls-private-key-file=/certs-dir/tls.key
            - --descheduling-interval=60s
            - --feature-gates=EvictionsInBackground=true
            - --tls-cipher-suites=TLS_AES_128_GCM_SHA256,TLS_AES_256_GCM_SHA384,TLS_CHACHA20_POLY1305_SHA256,TLS_ECDHE_ECDSA_WITH_AES_128_GCM_SHA256,TLS_ECDHE_RSA_WITH_AES_128_GCM_SHA256,TLS_ECDHE_ECDSA_WITH_AES_256_GCM_SHA384,TLS_ECDHE_RSA_WITH_AES_256_GCM_SHA384,TLS_ECDHE_ECDSA_WITH_CHACHA20_POLY1305_SHA256,TLS_ECDHE_RSA_WITH_CHACHA20_POLY1305_SHA256
            - --tls-min-version=VersionTLS12
            - -v=2
          command:
            - /bin/descheduler
          image: quay.io/tiraboschi/descheduler:nodesim
          imagePullPolicy: IfNotPresent
          name: descheduler
          resources:
            requests:
              cpu: 100m
              memory: 500Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
            - mountPath: /policy-dir
              name: policy-volume
            - mountPath: /certs-dir
              name: certs-dir
        - name: prometheus-proxy
          image: nginx:alpine
          ports:
            - containerPort: 443
              name: https
              protocol: TCP
          volumeMounts:
            - mountPath: /etc/nginx/nginx.conf
              name: proxy-config
              subPath: nginx.conf
            - mountPath: /tls
              name: prometheus-tls
              readOnly: true
            - mountPath: /var/cache/nginx
              name: nginx-cache
            - mountPath: /var/run
              name: nginx-run
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
            runAsUser: 101
            runAsGroup: 101
          resources:
            requests:
              cpu: 10m
              memory: 32Mi
      dnsPolicy: ClusterFirst
      priorityClassName: system-cluster-critical
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext:
        runAsNonRoot: true
        runAsUser: 65534
        seccompProfile:
          type: RuntimeDefault
      serviceAccount: descheduler-operand
      serviceAccountName: descheduler-operand
      terminationGracePeriodSeconds: 30
      volumes:
        - configMap:
            defaultMode: 420
            name: cluster
          name: policy-volume
        - name: certs-dir
          secret:
            defaultMode: 420
            secretName: kube-descheduler-serving-cert
        - name: proxy-config
          configMap:
            defaultMode: 420
            name: prometheus-proxy-config
        - name: prometheus-tls
          secret:
            defaultMode: 420
            secretName: prometheus-web-tls
        - name: nginx-cache
          emptyDir: {}
        - name: nginx-run
          emptyDir: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: softtainer
  name: softtainter
  namespace: kube-descheduler
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: softtainer
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: softtainer
    spec:
      containers:
        - args:
            - --policy-config-file=/policy-dir/policy.yaml
            - -v=2
          command:
            - /usr/bin/soft-tainter
          image: quay.io/tiraboschi/descheduler-softtainer:nodesim
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 1
            httpGet:
              path: /livez
              port: 6060
              scheme: HTTP
            initialDelaySeconds: 30
            periodSeconds: 5
            successThreshold: 1
            timeoutSeconds: 1
          name: softtainer
          readinessProbe:
            failureThreshold: 1
            httpGet:
              path: /readyz
              port: 6060
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 5
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            requests:
              cpu: 100m
              memory: 500Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
            - mountPath: /policy-dir
              name: policy-volume
            - mountPath: /certs-dir
              name: certs-dir
      dnsPolicy: ClusterFirst
      priorityClassName: system-cluster-critical
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext:
        runAsNonRoot: true
        runAsUser: 65534
        seccompProfile:
          type: RuntimeDefault
      serviceAccount: descheduler-softtainter
      serviceAccountName: descheduler-softtainter
      terminationGracePeriodSeconds: 30
      volumes:
        - configMap:
            defaultMode: 420
            name: cluster
          name: policy-volume
        - name: certs-dir
          secret:
            defaultMode: 420
            secretName: kube-descheduler-serving-cert
